Removed button line-height. This fixes alignment issues with additional input add buttons.

--- a/src/styles/unibase/buttons/__buttons.sass
+++ b/src/styles/unibase/buttons/__buttons.sass
@@ -21,7 +21,6 @@ $all-buttons: assign-inputs($buttons-list)
     border: none
     box-sizing: border-box
     font-size: 1rem
-    line-height: 1.6667rem
     border-radius: .2rem
     padding: 0 1.5rem
     margin: .5rem 1rem
